seems to resolve first visible AND 'load more' quantities

--- a/app/assets/stylesheets/widgets/photo-callout.scss
+++ b/app/assets/stylesheets/widgets/photo-callout.scss
@@ -138,14 +138,28 @@
       }
     }
 
-    &--3-col {
-      grid-template-columns: repeat(3, 1fr);
+    // hide all but X number is confusing: (n+X)
+    // so to hide all but the first
+    &--2-col {
+      grid-template-columns: repeat(2, 1fr);
 
-      a.photo-callout-widget:nth-child(n + 6) {
+      a.photo-callout-widget:nth-child(n + 4) {
         display: none;
       }
 
-      div.photo-callout-widget:nth-child(n + 6) {
+      div.photo-callout-widget:nth-child(n + 4) {
+        display: none;
+      }
+    }
+
+    &--3-col {
+      grid-template-columns: repeat(3, 1fr);
+
+      a.photo-callout-widget:nth-child(n + 3) {
+        display: none;
+      }
+
+      div.photo-callout-widget:nth-child(n + 3) {
         display: none;
       }
     }
@@ -390,16 +404,6 @@ button.photo-callout-widget__load-more {
 //     display: none;
 //   }
 // }
-
-.photo-callout-widget__container--2-col {
-  a.photo-callout-widget:nth-child(n + 3) {
-    display: none;
-  }
-
-  div.photo-callout-widget:nth-child(n + 3) {
-    display: none;
-  }
-}
 
 .photo-callout-widget__container--no-paginate {
   a.photo-callout-widget:nth-child(n + 4) {
